--- a/template.yaml
+++ b/template.yaml
@@ -17,7 +17,7 @@ Resources:
   CreateTripFunction:
     Type: AWS::Serverless::Function
     Properties:
-     CodeUri: target/trip-datalake-1.0.0-SNAPSHOT-jar-with-dependencies.jar # validar
+     CodeUri: build/libs/serverless-fiap-trip-0.0.1-SNAPSHOT.jar
      Handler: br.com.fiap.trip.serverless.handler.CreateTrip::handleRequest
      Runtime: java8
      Policies:
@@ -33,7 +33,7 @@ Resources:
   SearchTripByIdFunction:
     Type: AWS::Serverless::Function
     Properties:
-     CodeUri: target/trip-datalake-1.0.0-SNAPSHOT-jar-with-dependencies.jar
+     CodeUri: build/libs/serverless-fiap-trip-0.0.1-SNAPSHOT.jar
      Handler: br.com.fiap.trip.serverless.handler.SearchTripById::handleRequest
      Runtime: java8
      Policies:
@@ -49,7 +49,7 @@ Resources:
   SearchTripByDateFunction:
     Type: AWS::Serverless::Function
     Properties:
-     CodeUri: target/trip-datalake-1.0.0-SNAPSHOT-jar-with-dependencies.jar
+     CodeUri: build/libs/serverless-fiap-trip-0.0.1-SNAPSHOT.jar
      Handler: br.com.fiap.trip.serverless.handler.SearchTripByDate::handleRequest
      Runtime: java8
      Policies:
@@ -72,24 +72,34 @@ Resources:
       AttributeDefinitions:
         - AttributeName: id
           AttributeType: S
+        - AttributeName: dateTrip
+          AttributeType: S
         - AttributeName: country
           AttributeType: S
         - AttributeName: city
           AttributeType: S
-        - AttributeName: urlRepository
-          AttributeType: S
-        - AttributeName: date
-          AttributeType: S
       KeySchema:
         - AttributeName: id
           KeyType: HASH
+        - AttributeName: dateTrip
+          KeyType: RANGE
       LocalSecondaryIndexes: 
-        - IndexName: dateIndex
+        - IndexName: countryIndex
           KeySchema: 
             - AttributeName: id
               KeyType: HASH
+            - AttributeName: country
+              KeyType: RANGE
           Projection:
-             ProjectionType: ALL 
+             ProjectionType: ALL
+        - IndexName: cityIndex
+          KeySchema: 
+            - AttributeName: id
+              KeyType: HASH
+            - AttributeName: city
+              KeyType: RANGE
+          Projection:
+             ProjectionType: ALL
       BillingMode: PAY_PER_REQUEST              
 
 Outputs:
